make footer & navbar globally visible + fix styles

--- a/client/styles/Music.module.scss
+++ b/client/styles/Music.module.scss
@@ -1,10 +1,19 @@
+@use "../SassStyles/mixins" as *;
+
 .body {
 	// margin-top: 90px;
 	flex: 1;
 	display: flex;
+  min-height: 100vh;
+  flex-direction: column;
+
+  @include smMinBreakPoint {
+    flex-direction: row;
+  }
 
 	div {
 		position: relative;
+    display: flex;
 		flex: 1;
 		transition: 1s;
 
@@ -42,9 +51,8 @@
 
 		a {
       position: relative;
+      flex: 1;
 			display: flex;
-			width: 100%;
-			height: 100%;
 			justify-content: center;
 			align-items: center;
       z-index: 2;
